--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@inquirer/prompts": "^7.8.6"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KevinSSantos/Aula-javascript.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KevinSSantos/Aula-javascript/issues"
+  },
+  "homepage": "https://github.com/KevinSSantos/Aula-javascript#readme"
 }
